examples/test/testpolicy13250.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13250
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key17: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value44
          key31: value16
      podSelector:
        matchLabels:
          key43: value23
          key38: value30
          key30: value11
